add import jupyter notebook

--- a/notebook/visualization_from_neo4j.ipynb
+++ b/notebook/visualization_from_neo4j.ipynb
@@ -3,7 +3,12 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-05-26T07:20:22.119528300Z",
+     "start_time": "2023-05-26T07:20:21.002439300Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from neo4j import GraphDatabase\n",
@@ -12,8 +17,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-05-26T07:20:23.664123600Z",
+     "start_time": "2023-05-26T07:20:23.661121900Z"
+    }
+   },
    "outputs": [],
    "source": [
     "uri = \"bolt://localhost:7687\" \n",
@@ -26,19 +36,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-05-26T07:20:31.236412700Z",
+     "start_time": "2023-05-26T07:20:27.956649Z"
+    }
+   },
    "outputs": [
     {
      "data": {
+      "text/plain": "GraphWidget(layout=Layout(height='500px', width='100%'))",
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7813b944d29748a88cfa751e62d73b57",
        "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "GraphWidget(layout=Layout(height='500px', width='100%'))"
-      ]
+       "version_minor": 0,
+       "model_id": "d5f2f50962404166b52bf827e656a376"
+      }
      },
      "metadata": {},
      "output_type": "display_data"
@@ -55,19 +68,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-05-26T07:20:38.276746900Z",
+     "start_time": "2023-05-26T07:20:38.171219700Z"
+    }
+   },
    "outputs": [
     {
      "data": {
+      "text/plain": "GraphWidget(layout=Layout(height='500px', width='100%'))",
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "23450859a203459ba21b1c0933fe4361",
        "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "GraphWidget(layout=Layout(height='500px', width='100%'))"
-      ]
+       "version_minor": 0,
+       "model_id": "873354d249fa4965a287e395746f3034"
+      }
      },
      "metadata": {},
      "output_type": "display_data"
