--- a/notebook/CF_Recommendation_FastRP_KNN.ipynb
+++ b/notebook/CF_Recommendation_FastRP_KNN.ipynb
@@ -2,25 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "from graphdatascience import GraphDataScience\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "pd.set_option('display.width', 0)\n",
-    "pd.set_option('display.max_colwidth', 500)\n",
-    "pd.set_option('display.max_rows', 12)\n",
     "from neo4j import GraphDatabase\n",
-    "from yfiles_jupyter_graphs import GraphWidget\n",
-    "import networkx as nx"
+    "from yfiles_jupyter_graphs import GraphWidget"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-26T07:20:01.190881900Z",
@@ -46,13 +39,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "80bd7d7bc6a24ab2830802356c9b5d16",
+       "model_id": "74148db0aec1434390542f40bc55e2c6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -210,42 +203,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    userId                                movieTitle movieId  \\\n",
-      "0  user478                                  Stargate     316   \n",
-      "1  user478                     Bourne Ultimatum, The   54286   \n",
-      "2  user478                       Simpsons Movie, The   54272   \n",
-      "3  user478                              Transformers   53996   \n",
-      "4  user478                             Evan Almighty   53993   \n",
-      "5  user478                          Ocean's Thirteen   53322   \n",
-      "6  user478  Pirates of the Caribbean: At World's End   53125   \n",
-      "7  user478                           Shrek the Third   53121   \n",
-      "8  user478                                    Breach   51080   \n",
-      "9  user478                               Ratatouille   50872   \n",
+      "    userId                     movieTitle movieId  \\\n",
+      "0  user470  Independence Day (a.k.a. ID4)     780   \n",
+      "1  user470        American President, The      11   \n",
+      "2  user470                          Congo     160   \n",
+      "3  user470              Santa Clause, The     317   \n",
+      "4  user470                      Coneheads     435   \n",
+      "5  user470      Silence of the Lambs, The     593   \n",
+      "6  user470                     Home Alone     586   \n",
+      "7  user470                     Piano, The     509   \n",
+      "8  user470                   Philadelphia     508   \n",
+      "9  user470                Made in America     489   \n",
       "\n",
-      "                        similarUserIds  \n",
-      "0  [user45, user239, user570, user480]  \n",
-      "1                    [user45, user239]  \n",
-      "2                    [user45, user239]  \n",
-      "3                    [user45, user239]  \n",
-      "4                             [user45]  \n",
-      "5                    [user45, user239]  \n",
-      "6           [user45, user239, user570]  \n",
-      "7                             [user45]  \n",
-      "8                             [user45]  \n",
-      "9                    [user45, user239]  \n"
+      "                       similarUserIds  \n",
+      "0                  [user347, user179]  \n",
+      "1  [user347, user347, user94, user94]  \n",
+      "2                   [user347, user94]  \n",
+      "3          [user347, user94, user179]  \n",
+      "4          [user347, user229, user94]  \n",
+      "5          [user229, user94, user179]  \n",
+      "6                   [user229, user94]  \n",
+      "7                           [user229]  \n",
+      "8                           [user229]  \n",
+      "9                           [user229]  \n"
      ]
     }
    ],
    "source": [
     "query = '''\n",
-    "MATCH (u:User {id: 'user478'})\n",
+    "MATCH (u:User {id: 'user470'})\n",
     "MATCH (u)-[r1:SIMILAR]->(similarUser)-[r2:RATED]->(m:Movie)\n",
     "WHERE NOT EXISTS((u)-[:RATED]->(m))\n",
     "RETURN u.id AS userId, m.title AS movieTitle, m.id AS movieId, COLLECT(similarUser.id) AS similarUserIds\n",
@@ -267,30 +260,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  MovieId              MovieName     score\n",
-      "0   73017        Sherlock Holmes  0.965837\n",
-      "1   68954                     Up  0.964738\n",
-      "2   69122          Hangover, The  0.964345\n",
-      "3   54286  Bourne Ultimatum, The  0.962791\n",
-      "4   72998                 Avatar  0.962641\n",
-      "5  106696                 Frozen  0.951515\n",
-      "6  166643         Hidden Figures  0.929395\n"
+      "  MovieId                                  genres            MovieName  \\\n",
+      "0     500                         [Comedy, Drama]       Mrs. Doubtfire   \n",
+      "1     597                       [Comedy, Romance]         Pretty Woman   \n",
+      "2     367        [Action, Comedy, Crime, Fantasy]            Mask, The   \n",
+      "3     364  [Adventure, Animation, Drama, Musical]       Lion King, The   \n",
+      "4     480   [Action, Adventure, Sci-Fi, Thriller]        Jurassic Park   \n",
+      "5   52715                                [Comedy]  Kickin It Old Skool   \n",
+      "\n",
+      "      score  \n",
+      "0  0.977436  \n",
+      "1  0.974219  \n",
+      "2  0.973562  \n",
+      "3  0.973017  \n",
+      "4  0.972254  \n",
+      "5  0.881000  \n"
      ]
     }
    ],
    "source": [
     "query = '''\n",
-    "MATCH (targetMovie:Movie {id: '78499'})\n",
-    "MATCH (targetMovie)-[similarity:SIMILAR]-(similarMovie:Movie)\n",
+    "MATCH (targetMovie:Movie {id: '586'})\n",
+    "MATCH (targetMovie)-[similarity:SIMILAR]-(similarMovie:Movie)<-[:IS_GENRE_OF]-(genre:Genre)\n",
     "WHERE similarMovie.id <> targetMovie.id\n",
-    "RETURN DISTINCT similarMovie.id AS MovieId, similarMovie.title AS MovieName , similarity.score AS score\n",
+    "RETURN DISTINCT similarMovie.id AS MovieId, COLLECT(DISTINCT genre.name) AS genres, similarMovie.title AS MovieName , similarity.score AS score\n",
     "ORDER BY similarity.score DESC\n",
     "LIMIT 10\n",
     "'''\n",
@@ -317,7 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
