feat CF KNN functions

--- a/notebook/CF_Recommendation_FastRP_KNN.ipynb
+++ b/notebook/CF_Recommendation_FastRP_KNN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-26T07:20:01.190881900Z",
@@ -39,13 +39,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "74148db0aec1434390542f40bc55e2c6",
+       "model_id": "11cfd4e6160e44078f641b4fd22ef204",
        "version_major": 2,
        "version_minor": 0
       },
@@ -62,6 +62,40 @@
     "result = session.run(\"CALL db.schema.visualization()\")\n",
     "w = GraphWidget(graph = result.graph())\n",
     "w.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<neo4j._sync.work.result.Result at 0x15d9ed195d0>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "session.run('''\n",
+    "    CALL gds.graph.project(\n",
+    "  \t'movielens_projection',\n",
+    "  \t['User', 'Movie'],\n",
+    "  \t'RATED',\n",
+    "    {\n",
+    "        relationshipProperties: {\n",
+    "            rating: {\n",
+    "                property: 'rating',\n",
+    "                defaultValue: 0.0\n",
+    "        }\n",
+    "        }\n",
+    "    }\n",
+    "    );\n",
+    "''')"
    ]
   },
   {
@@ -160,27 +194,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    person1  person2  similarity\n",
-      "0   user126  user379    0.989860\n",
-      "1   user379  user126    0.989860\n",
-      "2   user242  user468    0.987524\n",
-      "3   user468  user242    0.987524\n",
-      "4   user130  user574    0.985089\n",
-      "..      ...      ...         ...\n",
-      "95  user235  user229    0.978445\n",
-      "96  user404  user411    0.978418\n",
-      "97  user411  user404    0.978418\n",
-      "98  user130  user242    0.978277\n",
-      "99  user394  user379    0.978269\n",
-      "\n",
-      "[100 rows x 3 columns]\n"
+      "   person1  person2  similarity\n",
+      "0  user126  user379    0.989860\n",
+      "1  user379  user126    0.989860\n",
+      "2  user242  user468    0.987524\n",
+      "3  user468  user242    0.987524\n",
+      "4  user130  user574    0.985089\n",
+      "5  user574  user130    0.985089\n",
+      "6  user379  user507    0.984774\n",
+      "7  user507  user379    0.984774\n",
+      "8  user150  user270    0.984757\n",
+      "9  user270  user150    0.984757\n"
      ]
     }
    ],
@@ -188,7 +219,7 @@
     "similar_user = session.run('''\n",
     "    MATCH (n:User)-[r:SIMILAR]->(m:User)\n",
     "    RETURN n.id as person1, m.id as person2, r.score as similarity\n",
-    "    ORDER BY similarity DESCENDING, person1, person2 limit 100\n",
+    "    ORDER BY similarity DESCENDING, person1, person2 limit 10\n",
     "''').to_df()\n",
     "print(similar_user)"
    ]
@@ -198,50 +229,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### User-based Recommendation"
+    "### Recommendation by user"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    userId                     movieTitle movieId  \\\n",
-      "0  user470  Independence Day (a.k.a. ID4)     780   \n",
-      "1  user470        American President, The      11   \n",
-      "2  user470                          Congo     160   \n",
-      "3  user470              Santa Clause, The     317   \n",
-      "4  user470                      Coneheads     435   \n",
-      "5  user470      Silence of the Lambs, The     593   \n",
-      "6  user470                     Home Alone     586   \n",
-      "7  user470                     Piano, The     509   \n",
-      "8  user470                   Philadelphia     508   \n",
-      "9  user470                Made in America     489   \n",
+      "   userId                                    movieTitle movieId  \\\n",
+      "0  user29                      Clear and Present Danger     349   \n",
+      "1  user29  Harry Potter and the Deathly Hallows: Part 1   81834   \n",
+      "2  user29                                    Black Swan   81591   \n",
+      "3  user29                                   Crazy Heart   73023   \n",
+      "4  user29                                        Avatar   72998   \n",
+      "5  user29                                      Invictus   72733   \n",
+      "6  user29                              Blind Side, The    72641   \n",
+      "7  user29                                 Up in the Air   72011   \n",
+      "8  user29                                Serious Man, A   71464   \n",
+      "9  user29        Harry Potter and the Half-Blood Prince   69844   \n",
       "\n",
-      "                       similarUserIds  \n",
-      "0                  [user347, user179]  \n",
-      "1  [user347, user347, user94, user94]  \n",
-      "2                   [user347, user94]  \n",
-      "3          [user347, user94, user179]  \n",
-      "4          [user347, user229, user94]  \n",
-      "5          [user229, user94, user179]  \n",
-      "6                   [user229, user94]  \n",
-      "7                           [user229]  \n",
-      "8                           [user229]  \n",
-      "9                           [user229]  \n"
+      "                                   genres      similarUserIds  \n",
+      "0        [Action, Crime, Drama, Thriller]           [user590]  \n",
+      "1            [Action, Adventure, Fantasy]           [user590]  \n",
+      "2                       [Drama, Thriller]  [user590, user261]  \n",
+      "3                        [Romance, Drama]           [user590]  \n",
+      "4             [Action, Adventure, Sci-Fi]           [user590]  \n",
+      "5                                 [Drama]           [user590]  \n",
+      "6                                 [Drama]           [user590]  \n",
+      "7                        [Drama, Romance]           [user590]  \n",
+      "8                         [Drama, Comedy]           [user590]  \n",
+      "9  [Adventure, Fantasy, Mystery, Romance]           [user590]  \n"
      ]
     }
    ],
    "source": [
     "query = '''\n",
-    "MATCH (u:User {id: 'user470'})\n",
-    "MATCH (u)-[r1:SIMILAR]->(similarUser)-[r2:RATED]->(m:Movie)\n",
+    "MATCH (u:User {id: 'user29'})\n",
+    "MATCH (u)-[r1:SIMILAR]->(similarUser)-[r2:RATED]->(m:Movie)<-[:IS_GENRE_OF]-(genre:Genre)\n",
     "WHERE NOT EXISTS((u)-[:RATED]->(m))\n",
-    "RETURN u.id AS userId, m.title AS movieTitle, m.id AS movieId, COLLECT(similarUser.id) AS similarUserIds\n",
+    "RETURN u.id AS userId, m.title AS movieTitle, m.id AS movieId, COLLECT(DISTINCT genre.name) AS genres, COLLECT(DISTINCT similarUser.id) AS similarUserIds\n",
     "LIMIT 10\n",
     "'''\n",
     "result = session.run(query)\n",
@@ -255,42 +286,91 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Item-based Recommendation"
+    "#### visualize the graph"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2794743efe424a2cbe08edf898f330fd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "GraphWidget(layout=Layout(height='500px', width='100%'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "query = '''\n",
+    "MATCH (u:User {id: 'user29'})\n",
+    "MATCH (u)-[r1:SIMILAR]->(similarUser)-[r2:RATED]->(m:Movie)\n",
+    "WHERE NOT EXISTS((u)-[:RATED]->(m))\n",
+    "RETURN u, similarUser, m, r1, r2\n",
+    "LIMIT 10\n",
+    "'''\n",
+    "result = session.run(query)\n",
+    "widget = GraphWidget(graph = result.graph())\n",
+    "widget.show()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Recommendation by movie"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  MovieId                                  genres            MovieName  \\\n",
-      "0     500                         [Comedy, Drama]       Mrs. Doubtfire   \n",
-      "1     597                       [Comedy, Romance]         Pretty Woman   \n",
-      "2     367        [Action, Comedy, Crime, Fantasy]            Mask, The   \n",
-      "3     364  [Adventure, Animation, Drama, Musical]       Lion King, The   \n",
-      "4     480   [Action, Adventure, Sci-Fi, Thriller]        Jurassic Park   \n",
-      "5   52715                                [Comedy]  Kickin It Old Skool   \n",
+      "  MovieId                                             genres  \\\n",
+      "0   60069            [Adventure, Animation, Romance, Sci-Fi]   \n",
+      "1   72998                        [Action, Adventure, Sci-Fi]   \n",
+      "2   59315                        [Action, Adventure, Sci-Fi]   \n",
+      "3   58559                             [Action, Crime, Drama]   \n",
+      "4   79132  [Action, Crime, Drama, Mystery, Sci-Fi, Thriller]   \n",
+      "5   78499            [Adventure, Animation, Comedy, Fantasy]   \n",
+      "6  115617                        [Action, Animation, Comedy]   \n",
+      "7   71264                               [Fantasy, Animation]   \n",
+      "8  111659                                [Adventure, Action]   \n",
+      "9   89039                           [Sci-Fi, Romance, Drama]   \n",
       "\n",
-      "      score  \n",
-      "0  0.977436  \n",
-      "1  0.974219  \n",
-      "2  0.973562  \n",
-      "3  0.973017  \n",
-      "4  0.972254  \n",
-      "5  0.881000  \n"
+      "                          movieTitle     score  \n",
+      "0                             WALL·E  0.979104  \n",
+      "1                             Avatar  0.975069  \n",
+      "2                           Iron Man  0.974797  \n",
+      "3                   Dark Knight, The  0.969951  \n",
+      "4                          Inception  0.968386  \n",
+      "5                        Toy Story 3  0.964738  \n",
+      "6                         Big Hero 6  0.959500  \n",
+      "7  Cloudy with a Chance of Meatballs  0.942115  \n",
+      "8                         Maleficent  0.926182  \n",
+      "9                      Another Earth  0.898279  \n"
      ]
     }
    ],
    "source": [
     "query = '''\n",
-    "MATCH (targetMovie:Movie {id: '586'})\n",
+    "MATCH (targetMovie:Movie {id: '68954'})\n",
     "MATCH (targetMovie)-[similarity:SIMILAR]-(similarMovie:Movie)<-[:IS_GENRE_OF]-(genre:Genre)\n",
     "WHERE similarMovie.id <> targetMovie.id\n",
-    "RETURN DISTINCT similarMovie.id AS MovieId, COLLECT(DISTINCT genre.name) AS genres, similarMovie.title AS MovieName , similarity.score AS score\n",
+    "RETURN DISTINCT similarMovie.id AS MovieId, COLLECT(DISTINCT genre.name) AS genres, similarMovie.title AS movieTitle , similarity.score AS score\n",
     "ORDER BY similarity.score DESC\n",
     "LIMIT 10\n",
     "'''\n",
@@ -298,6 +378,45 @@
     "print(result.to_df())\n",
     "# widget = GraphWidget(graph = result.graph())\n",
     "# widget.show()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Visualize the graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'session' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_16016/3322415275.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mLIMIT\u001b[0m \u001b[1;36m10\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m '''\n\u001b[1;32m----> 9\u001b[1;33m \u001b[0mresult\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msession\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mquery\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m \u001b[0mwidget\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mGraphWidget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgraph\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mresult\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgraph\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[0mwidget\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'session' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "query = '''\n",
+    "MATCH (targetMovie:Movie {id: '68954'})\n",
+    "MATCH (targetMovie)-[similarity:SIMILAR]-(similarMovie:Movie)<-[:IS_GENRE_OF]-(genre:Genre)\n",
+    "WHERE similarMovie.id <> targetMovie.id\n",
+    "RETURN DISTINCT targetMovie, similarMovie, similarity\n",
+    "ORDER BY similarity.score DESC\n",
+    "LIMIT 10\n",
+    "'''\n",
+    "result = session.run(query)\n",
+    "widget = GraphWidget(graph = result.graph())\n",
+    "widget.show()"
    ]
   }
  ],
