--- a/notebook/CF_Recommendation_FastRP_KNN.ipynb
+++ b/notebook/CF_Recommendation_FastRP_KNN.ipynb
@@ -72,44 +72,10 @@
     {
      "data": {
       "text/plain": [
-       "<neo4j._sync.work.result.Result at 0x15d9ed195d0>"
+       "<neo4j._sync.work.result.Result at 0x1b1daf79bd0>"
       ]
      },
      "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "session.run('''\n",
-    "    CALL gds.graph.project(\n",
-    "  \t'movielens_projection',\n",
-    "  \t['User', 'Movie'],\n",
-    "  \t'RATED',\n",
-    "    {\n",
-    "        relationshipProperties: {\n",
-    "            rating: {\n",
-    "                property: 'rating',\n",
-    "                defaultValue: 0.0\n",
-    "        }\n",
-    "        }\n",
-    "    }\n",
-    "    );\n",
-    "''')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<neo4j._sync.work.result.Result at 0x187be20d840>"
-      ]
-     },
-     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -291,13 +257,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2794743efe424a2cbe08edf898f330fd",
+       "model_id": "e6a601073b5d4da5abd5935461c3361a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -390,19 +356,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'session' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_16016/3322415275.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mLIMIT\u001b[0m \u001b[1;36m10\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m '''\n\u001b[1;32m----> 9\u001b[1;33m \u001b[0mresult\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msession\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrun\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mquery\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m \u001b[0mwidget\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mGraphWidget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgraph\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mresult\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgraph\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[0mwidget\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'session' is not defined"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ad81f7258e63452aafa45c0ca18c00a2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "GraphWidget(layout=Layout(height='500px', width='100%'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -417,6 +386,95 @@
     "result = session.run(query)\n",
     "widget = GraphWidget(graph = result.graph())\n",
     "widget.show()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### PageRank Algorithm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = '''\n",
+    "CALL gds.graph.project(\n",
+    "  \t'pagerank_collab',\n",
+    "  \t['Movie', 'Movie'],\n",
+    "  \t'SIMILAR',\n",
+    "  {\n",
+    "   \t relationshipProperties: {\n",
+    "      \tscore: {\n",
+    "        \tproperty: 'score',\n",
+    "        \tdefaultValue: 0.0\n",
+    "      }\n",
+    "    }\n",
+    "  }\n",
+    ");\n",
+    "'''\n",
+    "result = session.run(query)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  movieId                                         movieTitle     score  \\\n",
+      "0   69122                                      Hangover, The  0.053133   \n",
+      "1   72998                                             Avatar  0.048280   \n",
+      "2   68954                                                 Up  0.040258   \n",
+      "3   73017                                    Sherlock Holmes  0.039729   \n",
+      "4   54286                              Bourne Ultimatum, The  0.035928   \n",
+      "5   58559                                   Dark Knight, The  0.029241   \n",
+      "6   59315                                           Iron Man  0.026921   \n",
+      "7    6539  Pirates of the Caribbean: The Curse of the Bla...  0.023143   \n",
+      "8    5952             Lord of the Rings: The Two Towers, The  0.020266   \n",
+      "9    8961                                   Incredibles, The  0.019339   \n",
+      "\n",
+      "                                   genres  \n",
+      "0                         [Comedy, Crime]  \n",
+      "1             [Action, Adventure, Sci-Fi]  \n",
+      "2           [Adventure, Animation, Drama]  \n",
+      "3      [Action, Crime, Mystery, Thriller]  \n",
+      "4               [Action, Crime, Thriller]  \n",
+      "5                  [Action, Crime, Drama]  \n",
+      "6             [Action, Adventure, Sci-Fi]  \n",
+      "7    [Action, Adventure, Comedy, Fantasy]  \n",
+      "8                    [Adventure, Fantasy]  \n",
+      "9  [Action, Adventure, Animation, Comedy]  \n"
+     ]
+    }
+   ],
+   "source": [
+    "query = '''\n",
+    "    MATCH (src1:Movie {id: $movieid})\n",
+    "    CALL gds.pageRank.stream('pagerank_collab', {\n",
+    "    maxIterations: 20,\n",
+    "    dampingFactor: 0.85,\n",
+    "    sourceNodes: [src1],\n",
+    "    relationshipTypes: ['SIMILAR'],\n",
+    "    relationshipWeightProperty: 'score'\n",
+    "    })\n",
+    "    YIELD nodeId, score\n",
+    "    WHERE gds.util.asNode(nodeId).id <> src1.id\n",
+    "    WITH gds.util.asNode(nodeId) AS movie, score\n",
+    "    MATCH (movie)<-[:IS_GENRE_OF]-(genre:Genre)\n",
+    "    RETURN movie.id AS movieId, movie.title AS movieTitle, score, COLLECT(DISTINCT genre.name) AS genres\n",
+    "    ORDER BY score DESC\n",
+    "    LIMIT $n;\n",
+    "'''\n",
+    "result = session.run(query, movieid='78499', n=10)\n",
+    "print(result.to_df())"
    ]
   }
  ],
