remove unnecessary nodes

--- a/notebook/CF_Recommendation_FastRP_KNN.ipynb
+++ b/notebook/CF_Recommendation_FastRP_KNN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-05-26T07:20:01.190881900Z",
@@ -45,7 +45,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "11cfd4e6160e44078f641b4fd22ef204",
+       "model_id": "eae943872f124393a02e01c0b1e9b9c2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -65,6 +65,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "FastRP KNN"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -72,7 +80,7 @@
     {
      "data": {
       "text/plain": [
-       "<neo4j._sync.work.result.Result at 0x1b1daf79bd0>"
+       "<neo4j._sync.work.result.Result at 0x17eb3134c70>"
       ]
      },
      "execution_count": 4,
@@ -160,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -195,12 +203,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Recommendation by user"
+    "### Recommendation by user KNN"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -257,13 +265,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e6a601073b5d4da5abd5935461c3361a",
+       "model_id": "f5965d2b640c4bf28e3575b3a43ed918",
        "version_major": 2,
        "version_minor": 0
       },
@@ -293,12 +301,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Recommendation by movie"
+    "### Recommendation by movie KNN"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -306,34 +314,28 @@
      "output_type": "stream",
      "text": [
       "  MovieId                                             genres  \\\n",
-      "0   60069            [Adventure, Animation, Romance, Sci-Fi]   \n",
-      "1   72998                        [Action, Adventure, Sci-Fi]   \n",
-      "2   59315                        [Action, Adventure, Sci-Fi]   \n",
-      "3   58559                             [Action, Crime, Drama]   \n",
-      "4   79132  [Action, Crime, Drama, Mystery, Sci-Fi, Thriller]   \n",
-      "5   78499            [Adventure, Animation, Comedy, Fantasy]   \n",
-      "6  115617                        [Action, Animation, Comedy]   \n",
-      "7   71264                               [Fantasy, Animation]   \n",
-      "8  111659                                [Adventure, Action]   \n",
-      "9   89039                           [Sci-Fi, Romance, Drama]   \n",
+      "0   73017                 [Action, Crime, Mystery, Thriller]   \n",
+      "1   68954                      [Adventure, Animation, Drama]   \n",
+      "2   69122                                    [Comedy, Crime]   \n",
+      "3   54286                          [Action, Crime, Thriller]   \n",
+      "4   72998                        [Action, Adventure, Sci-Fi]   \n",
+      "5  106696  [Romance, Musical, Fantasy, Comedy, Animation,...   \n",
+      "6  166643                                            [Drama]   \n",
       "\n",
-      "                          movieTitle     score  \n",
-      "0                             WALL·E  0.979104  \n",
-      "1                             Avatar  0.975069  \n",
-      "2                           Iron Man  0.974797  \n",
-      "3                   Dark Knight, The  0.969951  \n",
-      "4                          Inception  0.968386  \n",
-      "5                        Toy Story 3  0.964738  \n",
-      "6                         Big Hero 6  0.959500  \n",
-      "7  Cloudy with a Chance of Meatballs  0.942115  \n",
-      "8                         Maleficent  0.926182  \n",
-      "9                      Another Earth  0.898279  \n"
+      "              movieTitle     score  \n",
+      "0        Sherlock Holmes  0.965837  \n",
+      "1                     Up  0.964738  \n",
+      "2          Hangover, The  0.964345  \n",
+      "3  Bourne Ultimatum, The  0.962791  \n",
+      "4                 Avatar  0.962641  \n",
+      "5                 Frozen  0.951515  \n",
+      "6         Hidden Figures  0.929395  \n"
      ]
     }
    ],
    "source": [
     "query = '''\n",
-    "MATCH (targetMovie:Movie {id: '68954'})\n",
+    "MATCH (targetMovie:Movie {id: '78499'})\n",
     "MATCH (targetMovie)-[similarity:SIMILAR]-(similarMovie:Movie)<-[:IS_GENRE_OF]-(genre:Genre)\n",
     "WHERE similarMovie.id <> targetMovie.id\n",
     "RETURN DISTINCT similarMovie.id AS MovieId, COLLECT(DISTINCT genre.name) AS genres, similarMovie.title AS movieTitle , similarity.score AS score\n",
@@ -356,13 +358,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ad81f7258e63452aafa45c0ca18c00a2",
+       "model_id": "e10db98684644dfb9b89605478b5509a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -398,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
